Add relations, references and enums
Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

--- a/huly/Game Asset/Audio Asset.yaml
+++ b/huly/Game Asset/Audio Asset.yaml
@@ -2,7 +2,7 @@ class: card:class:MasterTag
 title: Audio Asset
 properties:
   - label: purpose
-    # type: Select: Audio Asset Purpose (enum)
+    enumOf: './Audio Purpose.yaml'
   - label: duration
     type: TypeString
   - label: looping
