--- a/huly/Game Component/Character/NPC.yaml
+++ b/huly/Game Component/Character/NPC.yaml
@@ -2,4 +2,4 @@ class: card:class:MasterTag
 title: NPC
 properties:
   - label: alignment
-    # type: Select: NPC Alignment (enum)
+    enumOf: './Alignment.yaml'
