--- a/huly/Game Asset.yaml
+++ b/huly/Game Asset.yaml
@@ -1,9 +1,9 @@
-class: card:class:MasterTag
+extends: card:class:File
 title: Game Asset
 properties:
   - label: assetName
     type: TypeString
   - label: description
     type: TypeString
-  - label: fileFormats
-    # type: Multi-Select: Select
+  - label: fileFormat
+    enumOf: './File Format.yaml'
