--- a/huly/GameNarrativeEnvironmentAssociations.yaml
+++ b/huly/GameNarrativeEnvironmentAssociations.yaml
@@ -1,6 +1,6 @@
 class: core:class:Association
-typeA: './Game Narrative.yaml'
-typeB: '../../Game Component/Environment.yaml'
+typeA: './card:types:Document/Game Narrative.yaml'
+typeB: './Game Component/Environment.yaml'
 nameA: settingFor
 nameB: includesSettings
 type: 'N:N'
