Fixes for labels and relations
Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

--- a/huly/Game Component.yaml
+++ b/huly/Game Component.yaml
@@ -1,7 +1,7 @@
 class: card:class:MasterTag
 title: Game Component
 properties:
-  - label: name
+  - label: Name
     type: TypeString
-  - label: description
+  - label: Description
     type: TypeString
