--- a/huly/Game Component/CharacterEnvironmentAssociations.yaml
+++ b/huly/Game Component/CharacterEnvironmentAssociations.yaml
@@ -1,6 +1,6 @@
 class: core:class:Association
 typeA: './Character.yaml'
 typeB: './Environment.yaml'
-nameA: inhabitedBy
-nameB: existsIn
+nameA: Inhabited by
+nameB: Exists in
 type: 'N:N'
