--- a/huly/Game Component/CharacterItemAssociations.yaml
+++ b/huly/Game Component/CharacterItemAssociations.yaml
@@ -1,6 +1,6 @@
 class: core:class:Association
 typeA: './Character.yaml'
 typeB: './Item.yaml'
-nameA: possessedBy
-nameB: possesses
+nameA: Possessed by
+nameB: Possesses
 type: 'N:N'
