--- a/huly/card:types:Document/Game Narrative.yaml
+++ b/huly/card:types:Document/Game Narrative.yaml
@@ -1,7 +1,7 @@
 class: card:class:MasterTag
 title: Game Narrative
 properties:
-  - label: label
+  - label: Title
     type: TypeString
-  - label: description
+  - label: Description
     type: TypeString
