--- a/huly/card:types:File/Game Asset/ImageAssetAssociations.yaml
+++ b/huly/card:types:File/Game Asset/ImageAssetAssociations.yaml
@@ -1,6 +1,6 @@
 class: core:class:Association
 typeA: './Image Asset.yaml'
 typeB: '../../Game Component.yaml'
-nameA: depictedBy
-nameB: depicts
+nameA: Depicted by
+nameB: Depicts
 type: 'N:N'
