All init qms templates to be effective
Signed-off-by: Anna Khismatullina <anna.khismatullina@gmail.com>

--- a/script.yaml
+++ b/script.yaml
@@ -144,6 +144,12 @@
         role: 'OWNER'
         space: 'core:space:Model'
         person: ${userPerson}
+    - type: 'import'
+      path: './tracex'
+    - type: 'bulkUpdate'
+      _class: 'documents:mixin:DocumentTemplate'
+      data:
+        state: 'effective'
 - name: 'bold'
   steps:
     - type: 'update'
