uberf-10342: fix social id
Signed-off-by: Alexey Zinoviev <alexey.zinoviev@xored.com>

--- a/script.yaml
+++ b/script.yaml
@@ -75,6 +75,7 @@
     - type: 'create'
       _class: 'contact:class:SocialIdentity'
       data:
+        _id: ${creatorSocialId@global}
         space: 'contact:space:Contacts'
         collection: 'socialIds'
         attachedTo: ${creatorPerson}
