Support variables in import files
Signed-off-by: Anna Khismatullina <anna.khismatullina@gmail.com>

--- a/huly/Game Design.yaml
+++ b/huly/Game Design.yaml
@@ -4,6 +4,6 @@ identifier: GAME
 emoji: 🌟
 autoJoin: true
 members: 
-  - newuser@huly.io
+  - ${creatorName@global}
 owners: 
-  - newuser@huly.io
+  - ${creatorName@global}
