--- a/script.yaml
+++ b/script.yaml
@@ -150,6 +150,12 @@
       _class: 'documents:mixin:DocumentTemplate'
       data:
         state: 'effective'
+    - type: 'create'
+      _class: 'core:class:Configuration'
+      data:
+        _id: 'setting:ids:DisablePermissionsConfiguration'
+        space: 'core:space:Workspace'
+        enabled: true
 - name: 'bold'
   steps:
     - type: 'update'
