--- a/script.yaml
+++ b/script.yaml
@@ -144,6 +144,18 @@
         role: 'OWNER'
         space: 'core:space:Model'
         person: ${userPerson}
+    - type: 'import'
+      path: './tracex'
+    - type: 'bulkUpdate'
+      _class: 'documents:mixin:DocumentTemplate'
+      data:
+        state: 'effective'
+    - type: 'create'
+      _class: 'core:class:Configuration'
+      data:
+        _id: 'setting:ids:DisablePermissionsConfiguration'
+        space: 'core:space:Workspace'
+        enabled: true
 - name: 'bold'
   steps:
     - type: 'update'
