Huly v7 init files
Signed-off-by: Alexey Zinoviev <alexey.zinoviev@xored.com>

--- a/script.yaml
+++ b/script.yaml
@@ -85,7 +85,7 @@
         value: ${creatorSocialValue@global}
         confirmed: true
     - type: 'import'
-      path: './huly'
+      path: './huly_v07'
 - name: 'tracex-init'
   default: false
   steps:
