--- a/tracex_v07/controlled-docs.yaml
+++ b/tracex_v07/controlled-docs.yaml
@@ -2,10 +2,10 @@ class: documents:class:OrgSpace   # Required
 title: Onboarding            # Required
 private: false                    # Optional, default: false
 owners:                           # Optional, list of email addresses
-  - newuser@huly.io
+  - ${creatorName@global}
 members:                          # Optional, list of email addresses
-  - newuser@huly.io
+  - ${creatorName@global}
 description: Space for onboarding purpose              # Optional
 #qualified:                        # Optional, qualified user
 #manager:                          # Optional, QMS manager
-qara: newuser@huly.io             # Optional, QA/RA specialist
+qara: ${creatorName@global}             # Optional, QA/RA specialist
