--- a/tracex_v07/issue-onboarding.yaml
+++ b/tracex_v07/issue-onboarding.yaml
@@ -5,6 +5,6 @@ identifier: TCX
 emoji: 🌟
 autoJoin: true
 members: 
-  - newuser@huly.io
+  - ${creatorName@global}
 owners: 
-  - newuser@huly.io
+  - ${creatorName@global}
